// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test the STD_ERRORS_RESPONSES STD_ERRORS_RESPONSES.INTERNAL_SERVER_ERROR 1`] = `
{
  "body": "[{"error":"INTERNAL_SERVER_ERROR","message":"Internal Server Error","details":"","path":""}]",
  "headers": {
    "Access-Control-Allow-Origin": "*",
  },
  "isBase64Encoded": false,
  "multiValueHeaders": {},
  "statusCode": 500,
}
`;

exports[`test the STD_ERRORS_RESPONSES STD_ERRORS_RESPONSES.METHOD_NOT_ALLOWED 1`] = `
{
  "body": "[{"error":"METHOD_NOT_ALLOWED","message":"Method Not Allowed","details":"","path":""}]",
  "headers": {
    "Access-Control-Allow-Origin": "*",
  },
  "isBase64Encoded": false,
  "multiValueHeaders": {},
  "statusCode": 405,
}
`;

exports[`test the STD_ERRORS_RESPONSES STD_ERRORS_RESPONSES.NOT_FOUND 1`] = `
{
  "body": "[{"error":"NOT_FOUND","message":"Not Found","details":"","path":""}]",
  "headers": {
    "Access-Control-Allow-Origin": "*",
  },
  "isBase64Encoded": false,
  "multiValueHeaders": {},
  "statusCode": 404,
}
`;
